--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ textarea {
   .project-name .project-github-logo {
     text-align: right;
     position: relative;
-    top: 5px;
+    top: 5px !important;
     right: 10px; }
 
 .fab {
@@ -494,9 +494,6 @@ textarea {
 
 /* Projects media queries */
 @media (min-width: 768px) {
-  .project-github-logo {
-    top: 10px !important; }
-
   #projects-title-header h3 {
     position: relative;
     top: 70px; }
@@ -524,7 +521,7 @@ textarea {
     width: 40vw;
     height: 50px;
     position: relative;
-    top: -120px;
+    top: -160px;
     text-align: left; }
 
   .fab {
